2022-01-27  Patrick Griffis  <pgriffis@igalia.com>

        CSP: Clean up effective-violation handling in reports
        https://bugs.webkit.org/show_bug.cgi?id=235602

        Reviewed by Kate Cheney.

        Updated expectations with more passes.

        * web-platform-tests/content-security-policy/child-src/child-src-cross-origin-load.sub-expected.txt:
        * web-platform-tests/content-security-policy/frame-src/frame-src-cross-origin-load.sub-expected.txt:
        * web-platform-tests/content-security-policy/script-src/script-src-strict_dynamic_parser_inserted-expected.txt:

2022-01-27  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] Basic parsing support for query syntax
        https://bugs.webkit.org/show_bug.cgi?id=235712

        Reviewed by Darin Adler.

        * web-platform-tests/css/css-contain/container-queries/at-container-parsing-expected.txt:

2022-01-26  Alexey Shvayka  <ashvayka@apple.com>

        globalThis.queueMicrotask() should report thrown exceptions
        https://bugs.webkit.org/show_bug.cgi?id=235614

        Reviewed by Geoff Garen.

        Rebaseline WPT tests that are now passing.

        * web-platform-tests/html/webappapis/microtask-queuing/queue-microtask-exceptions.any-expected.txt:
        * web-platform-tests/html/webappapis/microtask-queuing/queue-microtask-exceptions.any.serviceworker-expected.txt:
        * web-platform-tests/html/webappapis/microtask-queuing/queue-microtask-exceptions.any.worker-expected.txt:

2022-01-26  Chris Dumez  <cdumez@apple.com>

        Unreviewed, revert r286855 as it caused form submission issues
        https://bugs.webkit.org/show_bug.cgi?id=235645
        <rdar://88020080>

        * web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valid-expected.txt:
        * web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valueMissing-expected.txt: